fix replies in question not showing correct username

--- a/frontend/techhelp-frontend/src/index.css
+++ b/frontend/techhelp-frontend/src/index.css
@@ -307,3 +307,39 @@ footer {
 .logout-btn:hover {
     cursor: pointer;
 }
+
+/* Create Question styles */
+
+.create-form {
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.create-form-input-container {
+    display: flex;
+    gap: 2em;
+}
+
+.create-form-input-container input {
+    width: 100%;
+    height: 50px;
+    padding: 0.2em 0.5em;
+}
+
+.create-form-input-container textarea {
+    
+}
+
+.create-form-input-container label {
+    font-weight: bold;
+}
+
+.create-form button {
+    padding: 2em 0em;
+    border: none;
+    background-color: transparent;
+    border: 2px solid black;
+    cursor: pointer;
+}
